--- a/Config.ini
+++ b/Config.ini
@@ -1,23 +1,23 @@
 [mqtt]
-host = mqtt.ejemplo.com            # Dirección del broker MQTT
-port = 1883                        # Puerto del broker (1883 sin TLS, 8883 con TLS)
-username = usuario_mqtt            # Usuario MQTT (si requiere autenticación)
-password = secreto_mqtt            # Contraseña MQTT
-client_id = MiGatewayPython        # ID de cliente MQTT (puede dejarse vacío para generar uno aleatorio)
-topics = sensors/+/data, alarms    # Lista de topics a suscribir (separados por coma)
-qos = 1                            # QoS para suscripciones (0, 1 o 2)
-version = 5                        # Versión MQTT a usar (5 para MQTT 5.0, 3 para MQTT 3.1.1)
+host = mqtt.example.com           # Dirección del broker MQTT
+port = 1883                       # Puerto del broker (1883 para no TLS, 8883 para TLS)
+username = mi_usuario_mqtt        # Usuario para autenticación MQTT
+password = mi_contraseña_mqtt     # Contraseña del usuario MQTT
+client_id = mqtt_postgres_gateway # ID opcional del cliente MQTT
+topics = sensors/+, alarms        # Lista de topics MQTT (pueden incluir comodines +/#)
+qos = 1                           # Nivel de QoS: 0, 1 o 2
+version = 5                       # Versión del protocolo MQTT: 3 o 5
 
 [postgres]
-host = db.servidor.local           # Host/PostgreSQL (puede ser IP o nombre)
-port = 5432                        # Puerto de PostgreSQL
-database = mi_base_datos           # Nombre de la base de datos
-user = mi_usuario                  # Usuario de la base de datos
-password = mi_password             # Contraseña de la base de datos
+host = localhost                  # Dirección del servidor PostgreSQL
+port = 5432                       # Puerto por defecto de PostgreSQL
+database = sensores               # Nombre de la base de datos
+user = postgres                   # Usuario de la base de datos
+password = mi_contraseña_pg       # Contraseña del usuario
 
 [service]
-threads = 4                        # Número de hilos de escritura a BD
+threads = 4                       # Número de hilos de escritura concurrentes a PostgreSQL
 log_file = /var/log/mqtt_pg_gateway.log  # Ruta del archivo de log
-log_level = INFO                   # Nivel de log (DEBUG, INFO, WARNING, ERROR)
-log_max_bytes = 10485760           # Tamaño máximo del log antes de rotar (10 MB en este ejemplo)
-log_backup_count = 5               # Número de archivos de log antiguos a conservar
+log_level = INFO                  # Nivel de detalle del log: DEBUG, INFO, WARNING, ERROR
+log_max_bytes = 10485760          # Tamaño máximo del log antes de rotar (10 MB en este ejemplo)
+log_backup_count = 5              # Número de archivos de log antiguos a conservar
