--- a/configdev.ini
+++ b/configdev.ini
@@ -13,7 +13,7 @@ host = localhost                   # Host/PostgreSQL (puede ser IP o nombre)
 port = 5433                        # Puerto de PostgreSQL
 database = postgres                # Nombre de la base de datos
 user = postgres                    # Usuario de la base de datos
-password = Toni1!..00              # Contraseña de la base de datos
+password = password              # Contraseña de la base de datos
 
 [service]
 threads = 4                        # Número de hilos de escritura a BD
