--- a/Config.ini
+++ b/Config.ini
@@ -1,23 +1,22 @@
 [mqtt]
-host = mqtt.example.com           # Dirección del broker MQTT
-port = 1883                       # Puerto del broker (1883 para no TLS, 8883 para TLS)
-username = mi_usuario_mqtt        # Usuario para autenticación MQTT
-password = mi_contraseña_mqtt     # Contraseña del usuario MQTT
-client_id = mqtt_postgres_gateway # ID opcional del cliente MQTT
-topics = sensors/+, alarms        # Lista de topics MQTT (pueden incluir comodines +/#)
-qos = 1                           # Nivel de QoS: 0, 1 o 2
-version = 5                       # Versión del protocolo MQTT: 3 o 5
+host = broker.mqtt.cool           
+port = 1883                      
+username =        
+password =      
+client_id = mqtt_postgres 
+topics = prueb/1/tlb, prueb/2/tlb        
+qos = 0                           
+version = 3                       
 
 [postgres]
-host = localhost                  # Dirección del servidor PostgreSQL
-port = 5432                       # Puerto por defecto de PostgreSQL
-database = sensores               # Nombre de la base de datos
-user = postgres                   # Usuario de la base de datos
-password = mi_contraseña_pg       # Contraseña del usuario
+host = localhost                  
+port = 5433                      
+database = postgres               
+user = postgres                  
+password = Toni1!..00
+schema = mqtt       
 
 [service]
-threads = 4                       # Número de hilos de escritura concurrentes a PostgreSQL
-log_file = /var/log/mqtt_pg_gateway.log  # Ruta del archivo de log
-log_level = INFO                  # Nivel de detalle del log: DEBUG, INFO, WARNING, ERROR
-log_max_bytes = 10485760          # Tamaño máximo del log antes de rotar (10 MB en este ejemplo)
-log_backup_count = 5              # Número de archivos de log antiguos a conservar
+threads = 4                       
+log_file = gateway.log  
+log_level = INFO                  
