cambios en config.ini y readme

--- a/Config.ini
+++ b/Config.ini
@@ -1,22 +1,22 @@
 [mqtt]
-host = broker.mqtt.cool           
-port = 1883                      
-username =        
-password =      
-client_id = mqtt_postgres 
-topics = prueb/1/tlb, prueb/2/tlb        
-qos = 0                           
-version = 3                       
+host = mqtt.example.com
+port = 1883
+username = tu_usuario
+password = tu_contraseña
+client_id = mqtt_postgres_gateway
+topics = sensores/+, alarmas
+qos = 1
+version = 5
 
 [postgres]
-host = localhost                  
-port = 5433                      
-database = postgres               
-user = postgres                  
-password = Toni1!..00
-schema = mqtt       
+host = localhost
+port = 5432
+database = sensores
+user = postgres
+password = tu_contraseña_pg
+schema = sensores         
 
 [service]
-threads = 4                       
-log_file = gateway.log  
-log_level = INFO                  
+threads = 4
+log_file = mqtt_pg_gateway.log
+log_level = INFO                 
